0.10.0
 - fix: make sure DCOR-Aid starts when the server is not reachable (#57)
 - fix: make sure DCOR-Aid starts when the API token is wrong (#57)
 - enh: add with_api_key and with_correct_version keyword arguments to
   CKANAPI.is_available
 - ref: do not update login status asyncronously in the background
 - ref: new status_widget submodule
 - setup: DCOR-Aid 0.10.0 requires CKAN 2.9.4 on the server side
0.9.2
 - ci: turn tests into a submodule
 - ref: add pyqtSlot decorators where misssing
 - ref: cleanup threads to isolate #14
0.9.1
 - fix: don't print upload job when upload is completed in CLI
 - fix: daemonize background thread in CLI dcoraid-upload-task
 - setup: bump dclab from 0.38.2 to 0.39.3
0.9.0
 - feat: add CLI command dcoraid-upload-task for uploading individual
   tasks from the command line, bypassing the GUI (#37)
0.8.6:
 - tests: did not run on Windows
0.8.5
 - enh: introduce APIOutdatedError (server response)
 - enh: inform the user to upgrade DCOR-Aid, if the server does not
   support the current version
 - fix: handle spaces in uploaded resources names (#51)
 - ref: combine response handling for API GET and POST requests
0.8.4
 - fix: properly handle "user_list" for anonymous users
 - ref: reorganized APIErros
0.8.3
 - fix: APIConflictError "input field id was not expected"
   when loading tasks and attempting to create a new dataset
0.8.2
 - enh: include datasets share with the user in the "My Data" tab
 - fix: catch OSError when trying to load a task that is on an
   unmounted network share (#48)
 - fix: tell users when persistent tasks cannot be loaded because
   the paths to the resources are invalid (#48)
 - ref: extended APIInterrogator by `registry_id` and `__contains__`
0.8.1
 - fix: missed a case for task dataset IDs that don't exist but
   have been stored in the persistent task dictionary
0.8.0
 - feat: allow to add datasets to a collection (#11)
 - fix: allow empty lines in PersistentTaskDatasetIDDict files